--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ ul {
   color: #2196f3;
 }
 .hero {
-  background-image: url(/images/HeroBG.jpg);
+  background-image: url(images/HeroBG.jpg);
   padding-top: 158px;
   padding-bottom: 158px;
   background-position: center;
