--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ ul {
   padding: 0;
 }
 
-
 .conteiner {
   padding: 0 15px;
   max-width: 1440px;
@@ -67,6 +66,7 @@ ul {
   text-transform: uppercase;
   text-align: center;
   /* border-bottom: 2px solid #2196F3; */
+  margin-bottom: 30px;
 }
 .section-title::after {
   content: "";
@@ -82,21 +82,107 @@ section {
 
 .game {
   border: 1px solid #eee;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+.game:hover .game-title {
+  color: #2196f3;
 }
 .game-img {
   width: 100%;
 }
 
-.game-info{
+.game-info {
   padding: 20px 24px 30px;
   line-height: 30px;
 }
-.game-title{
+.game-title {
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
 }
-.game-text{
+.game-text {
   color: #757575;
   letter-spacing: 0.03em;
- 
+}
+.form-field {
+  margin-bottom: 10px;
+}
+.form-label {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 4px;
+}
+.form-input {
+  min-width: 100%;
+  width: 100%;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+.form-input:focus {
+  outline: none;
+  border-color: #2196f3;
+}
+
+.contact-form {
+  max-width: 370px;
+  margin: auto;
+}
+.btn{
+  padding: 10px 58px;
+  border: none;
+  background-color: #188ce8;
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
+  margin-bottom: 54px;
+}
+.btn:hover{
+  background-color: #0377d6;
+}
+.footer{
+  background-color:#2F303A ;
+  padding: 60px 15px;
+}
+.logo-footer{
+  color: #ffff;
+}
+.footer--address{
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+text-align: center;
+letter-spacing: 0.03em;
+color: #fff;
+margin-bottom: 8px;
+}
+.footer--email,
+.footer--phone {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  line-height: 24px;
+  display: block;
+  text-align: center;
 }
